--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="container-fluid">
 
                 <a class="navbar-brand ps-5" href="AV IMP End-term-Website.html">
-                    <img src="Images to code/Website sem3/Black logo.png" alt="" style="height:50px">
+                    <img src="Black logo.png" alt="" style="height:50px">
                 </a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -85,7 +85,7 @@
         </div>
 
         
-            <img src="Images to code/Website sem3/square-pic.jpg" alt="" class="img-H pt-5 float-end"
+            <img src="square-pic.jpg" alt="" class="img-H pt-5 float-end"
             data-toggle="tooltip"
             data-placement="right" title="Hi!">
             <!-- ADD TOOLTIP HELLO IMG -->
@@ -142,7 +142,7 @@
         </div>
 
         <!-- About Me Picture in same div -->
-        <img src="Images to code/Website sem3/ABT-ME4.jpg" alt="" class="static-35">
+        <img src="ABT-ME4.jpg" alt="" class="static-35">
     </div>
     <!-- END OF TIMELINE DIV -->
 
@@ -154,8 +154,8 @@
     <div class="row pb-0 HB-Line mb-0" id="scrollspy-heading3">
         <!-- CLASS APPS: L-IM-H -->
       <div class="col-5 ">
-          <img src="Images to code/Website sem3/Artboard 3.png" alt="" class=" ms-5 mb-0 front-img" style="width: 50vw;">
-          <img src="Images to code/Website sem3/Skills-4.png" alt="" class="pb-0 mb-0 mt-0 back-img" style="width: 100vw;">
+          <img src="Artboard 3.png" alt="" class=" ms-5 mb-0 front-img" style="width: 50vw;">
+          <img src="Skills-4.png" alt="" class="pb-0 mb-0 mt-0 back-img" style="width: 100vw;">
       </div>
 
       <div class="" style="width: 360px; padding: 0; margin: 0;">
@@ -195,7 +195,7 @@
         <div class="col-2"></div>
 
         <!-- WORKING IMG -->
-        <img src="Images to code/Website sem3/working-2.jpg" alt="" class="static-35 float-end">
+        <img src="working-2.jpg" alt="" class="static-35 float-end">
 
     </div>
 
@@ -216,7 +216,7 @@
 
         <div class="col-2">
             <a href="https://mail.google.com/mail/u/0/#inbox">
-                <img src="Images to code/Website sem3/Env.png" alt="" class="CON-IM pb-5" 
+                <img src="Env.png" alt="" class="CON-IM pb-5" 
                 data-toggle="tooltip"
                 data-placement="right" title="Archana.V.Designs@gmail.com">
             </a>
@@ -224,7 +224,7 @@
         
         <div class="col-2">
             <a href="https://www.linkedin.com/">
-                <img src="Images to code/Website sem3/linkedin.png" alt="" class="CON-IM pb-5 ms-0 ps-0"
+                <img src="linkedin.png" alt="" class="CON-IM pb-5 ms-0 ps-0"
                 data-toggle="tooltip"
                 data-placement="right" title="Click to visit my LinkedIn Page">
             </a>
