--- a/1-WORK-Carousel.html
+++ b/1-WORK-Carousel.html
@@ -24,7 +24,7 @@
         <div class="container-fluid">
 
             <a class="navbar-brand ps-5" href="AV IMP End-term-Website.html"> 
-                <img src="Images to code/Website sem3/Black logo.png" alt="" style="height:50px"> 
+                <img src="Black logo.png" alt="" style="height:50px"> 
             </a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -83,7 +83,7 @@
             data-placement="right" 
             title="Click to learn more">
 
-                <img src="Images to code/Website sem3/Mumbai Inner tri fold brochure.jpg" class="card-img-top"
+                <img src="Mumbai Inner tri fold brochure.jpg" class="card-img-top"
                     alt="">
                 <div class="card-body pb-0">
                     <p class="card-text text-center ">
@@ -102,7 +102,7 @@
             data-toggle="tooltip"
             data-placement="right" 
             title="Click to learn more">
-                <img src="Images to code/Website sem3/TIB-Billboard.jpg" class="card-img-top"
+                <img src="TIB-Billboard.jpg" class="card-img-top"
                     alt="">
                 <div class="card-body pb-0">
                     <p class="card-text  text-center">
@@ -121,7 +121,7 @@
             data-placement="right" 
             title="Click to learn more">
 
-                <img src="Images to code/Website sem3/Cookbook mockup.jpg" class="card-img-top" alt="">
+                <img src="Cookbook mockup.jpg" class="card-img-top" alt="">
                 <div class="card-body pb-0">
                     <p class="card-text  text-center">
                         <b> Beginners' Guide to Italian Cuisine</b>
@@ -140,7 +140,7 @@
             data-placement="right" 
             title="Click to learn more">
 
-                <img src="Images to code/Website sem3/GOLDEN-BLUE SINGLE FIXED SHADOW.jpg" class="card-img-top"
+                <img src="GOLDEN-BLUE SINGLE FIXED SHADOW.jpg" class="card-img-top"
                     alt="">
                 <div class="card-body pb-0">
                     <p class="card-text  text-center"> 
@@ -160,7 +160,7 @@
             data-placement="right" 
             title="Click to learn more">
 
-                <img src="Images to code/Website sem3/TP-F.jpg" class="card-img-top"
+                <img src="TP-F.jpg" class="card-img-top"
                     alt="">
                 <div class="card-body pb-0">
                     <p class="card-text  text-center">
@@ -180,7 +180,7 @@
             data-placement="right" 
             title="Click to learn more">
 
-                <img src="Images to code/Website sem3/GM2.jpg" class="card-img-top"
+                <img src="GM2.jpg" class="card-img-top"
                     alt="">
                 <div class="card-body pb-0">
                     <p class="card-text  text-center"> 
