--- a/A-carou-work.html
+++ b/A-carou-work.html
@@ -28,7 +28,7 @@
                 <!-- <div class="VT-line-NB"></div> -->
 
                 <a class="navbar-brand ps-5" href="AV IMP End-term-Website.html">
-                    <img src="Images to code/Website sem3/Black logo.png" alt="" style="height:50px">
+                    <img src="Black logo.png" alt="" style="height:50px">
                 </a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -61,7 +61,7 @@
 
     <!-- MUMBAI MUNCHIES -->
     <div class="row HB-Line">
-        <img class="p-5 pb-0 ps-0 pe-0 Port-half" src=" Images to code/Website sem3/mumbai-3.jpg" alt=""
+        <img class="p-5 pb-0 ps-0 pe-0 Port-half" src="mumbai-3.jpg" alt=""
         data-toggle="tooltip"
             data-placement="right" 
             title="Brochure">
@@ -89,12 +89,12 @@
     <div class="row HB-Line mb-5">
 
 
-        <img class="pb-0 ps-0 pe-0 Port-half" src="Images to code/Website sem3/Mumbai Inner tri fold brochure.jpg" alt=""
+        <img class="pb-0 ps-0 pe-0 Port-half" src="Mumbai Inner tri fold brochure.jpg" alt=""
             data-toggle="tooltip"
                 data-placement="right" 
                 title="Brochure">
 
-        <img class="pb-0 ps-0 pe-0 Port-half" src="Images to code/Website sem3/Mumbai Outer.jpg" alt=""
+        <img class="pb-0 ps-0 pe-0 Port-half" src="Mumbai Outer.jpg" alt=""
         data-toggle="tooltip"
             data-placement="right" 
             title="Brochure">
