--- a/B-carou-work.html
+++ b/B-carou-work.html
@@ -28,7 +28,7 @@
                 <!-- <div class="VT-line-NB"></div> -->
 
                 <a class="navbar-brand ps-5" href="AV IMP End-term-Website.html">
-                    <img src="Images to code/Website sem3/Black logo.png" alt="" style="height:50px">
+                    <img src="Black logo.png" alt="" style="height:50px">
                 </a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -63,7 +63,7 @@
     <div class="row HB-Line">
         <!-- HB-Line -->
         <img class="pt-5 pb-0 ps-0 pe-0 Port-half" 
-        src="Images to code/Website sem3/TIB-Billboard.jpg" alt=""
+        src="TIB-Billboard.jpg" alt=""
         data-toggle="tooltip"
         data-placement="right" 
         title="Billboard design">
@@ -96,64 +96,65 @@
 
     <div class="row">
         <img class="pb-0 ps-0 pe-0 pt-0 Port-half HB-Line" 
-        src="Images to code/Website sem3/TIB-cups.jpg" alt=""
+        src="TIB-cups.jpg" alt=""
         data-toggle="tooltip"
         data-placement="right" 
         title="Ice cream cups">
 
-        <img class="pb-0 ps-0 pe-0 pt-0 Port-half HB-Line" src="Images to code/Website sem3/TIB tub.jpg" alt=""
+        <img class="pb-0 ps-0 pe-0 pt-0 Port-half HB-Line" 
+        src="TIB tub.jpg" alt=""
         data-toggle="tooltip"
         data-placement="right" 
         title="Ice cream tub">
 
 
         <img class="pb-0 ps-0 pe-0 pt-0 Port-half HB-Line" 
-        src="Images to code/Website sem3/TIB-CONE2.jpg" alt="" 
+        src="TIB-CONE2.jpg" alt="" 
         data-toggle="tooltip"
         data-placement="right" 
         title="Cone wrappers">
 
         <img class="pb-0 ps-0 pe-0 pt-0 Port-half HB-Line" 
-        src="Images to code/Website sem3/TIB-menu.jpg" alt=""
+        src="TIB-menu.jpg" alt=""
         data-toggle="tooltip"
         data-placement="right" 
         title="Menu">
 
 
         <img class="pb-0 ps-0 pe-0 pt-0 Port-half HB-Line" 
-        src="Images to code/Website sem3/TIB-INSTA.jpg" alt=""
+        src="TIB-INSTA.jpg" alt=""
         data-toggle="tooltip"
         data-placement="right" 
         title="Instagram post">
 
         <img class="pb-0 ps-0 pe-0 pt-0 Port-half HB-Line" 
-        src="Images to code/Website sem3/TIB-NEWS.jpg" alt=""
+        src="TIB-NEWS.jpg" alt=""
         data-toggle="tooltip"
         data-placement="right" 
         title="Newspaper Ad">
 
 
         <img class="pb-0 ps-0 pe-0 pt-0 Port-half HB-Line" 
-        src="Images to code/Website sem3/TIB TSHIRT.jpg" alt=""
+        src="TIB TSHIRT.jpg" alt=""
         data-toggle="tooltip"
         data-placement="right" 
         title="Uniform T-shirt">
     
         <img class="pb-0 ps-0 pe-0 pt-0 Port-half HB-Line" 
-        src="Images to code/Website sem3/TIB CAP.jpg" alt=""
+        src="TIB CAP.jpg" alt=""
         data-toggle="tooltip"
         data-placement="right" 
         title="Uniform Cap">
 
 
         <img class="pb-0 ps-0 pe-0 pt-0 Port-half HB-Line" 
-        src="Images to code/Website sem3/TIB- dent poster.jpg" alt=""
+        src="TIB- dent poster.jpg" alt=""
         data-toggle="tooltip"
         data-placement="right" 
         title="Poster to be put outside a Dental Office">
     
         <img class="pb-0 ps-0 pe-0 pt-0 Port-half HB-Line" 
-        src="Images to code/Website sem3/TIB bus stand.jpg" alt=""
+        src="TIB bus stand.jpg" alt=""
         data-toggle="tooltip"
         data-placement="right" 
         title="Poster for a Bus Stand">
