--- a/C-carou-work.html
+++ b/C-carou-work.html
@@ -28,7 +28,7 @@
                 <!-- <div class="VT-line-NB"></div> -->
 
                 <a class="navbar-brand ps-5" href="AV IMP End-term-Website.html">
-                    <img src="Images to code/Website sem3/Black logo.png" alt="" style="height:50px">
+                    <img src="Black logo.png" alt="" style="height:50px">
                 </a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -62,7 +62,7 @@
     <!-- COOKBOOK -->
     <div class="row HB-Line">
         <img class="p-5 pb-0 ps-0 pe-0 Port-half" 
-        src="Images to code/Website sem3/typo-covers.jpg"
+        src="typo-covers.jpg"
         alt=""
         data-toggle="tooltip"
         data-placement="right" 
@@ -92,7 +92,7 @@
         <div class="row HB-Line mb-5">
 
             <img class="pb-0 ps-0 pe-0 Port-half" 
-            src="Images to code/Website sem3/typo-top1.jpg"
+            src="typo-top1.jpg"
             alt=""
             data-toggle="tooltip"
             data-placement="right" 
@@ -100,7 +100,7 @@
 
 
             <img class="pb-0 ps-0 pe-0 Port-half" 
-            src="Images to code/Website sem3/Cookbook mockup.jpg"
+            src="Cookbook mockup.jpg"
             alt=""
             data-toggle="tooltip"
             data-placement="right" 
