--- a/D-carou-work.html
+++ b/D-carou-work.html
@@ -28,7 +28,7 @@
                 <!-- <div class="VT-line-NB"></div> -->
 
                 <a class="navbar-brand ps-5" href="AV IMP End-term-Website.html">
-                    <img src="Images to code/Website sem3/Black logo.png" alt="" style="height:50px">
+                    <img src="Black logo.png" alt="" style="height:50px">
                 </a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -61,7 +61,7 @@
 
     <!-- ROCOCO ICE CREAM -->
     <div class="row HB-Line">
-        <img class="p-5 pb-0 ps-0 pe-0 Port-half" src="Images to code/Website sem3/GOLDEN-BLUE SINGLE FIXED SHADOW.jpg" alt=""
+        <img class="p-5 pb-0 ps-0 pe-0 Port-half" src="GOLDEN-BLUE SINGLE FIXED SHADOW.jpg" alt=""
             data-toggle="tooltip" data-placement="right" title="Rococo packaging">
 
         <div class="col ps-0">
@@ -89,7 +89,7 @@
     </div>
 
     <div class="row HB-Line p-0 m-0 mb-5">
-        <img src="Images to code/Website sem3/RococoIC2.jpg" alt="" class="p-0 m-0"
+        <img src="RococoIC2.jpg" alt="" class="p-0 m-0"
         style="width: 100vw;"
         data-toggle="tooltip" data-placement="right" title="Rococo packaging">
     </div>
