--- a/E-carou-work.html
+++ b/E-carou-work.html
@@ -28,7 +28,7 @@
                 <!-- <div class="VT-line-NB"></div> -->
 
                 <a class="navbar-brand ps-5" href="AV IMP End-term-Website.html">
-                    <img src="Images to code/Website sem3/Black logo.png" alt="" style="height:50px">
+                    <img src="Black logo.png" alt="" style="height:50px">
                 </a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -61,7 +61,7 @@
 
     <!-- SUKHROSE-->
     <div class="row HB-Line">
-        <img class="p-5 pb-0 ps-0 pe-0 Port-half" src="Images to code/Website sem3/TP-F.jpg" alt=""
+        <img class="p-5 pb-0 ps-0 pe-0 Port-half" src="TP-F.jpg" alt=""
             data-toggle="tooltip" data-placement="right" title="Mithai Packaging">
 
         <div class="col ps-0">
@@ -91,12 +91,12 @@
 
 
     <div class="row pb-0 ps-0 pe-0 pt-0 HB-Line mb-5">
-        <img src="Images to code/Website sem3/typo 3.jpg" 
+        <img src="typo 3.jpg" 
         class="p-0 m-0 Port-half"
         alt=""
         data-toggle="tooltip" data-placement="right" title="Mithai Packaging">
 
-        <img src="Images to code/Website sem3/TP-B.jpg" 
+        <img src="TP-B.jpg" 
         class="p-0 m-0 Port-half"
         alt=""
         data-toggle="tooltip" data-placement="right" title="Mithai Packaging">
