--- a/F-carou-work.html
+++ b/F-carou-work.html
@@ -28,7 +28,7 @@
                 <!-- <div class="VT-line-NB"></div> -->
 
                 <a class="navbar-brand ps-5" href="AV IMP End-term-Website.html">
-                    <img src="Images to code/Website sem3/Black logo.png" alt="" style="height:50px">
+                    <img src="Black logo.png" alt="" style="height:50px">
                 </a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -61,7 +61,8 @@
 
     <!-- GLOSSARY -->
     <div class="row HB-Line">
-        <img class="p-5 pb-0 ps-0 pe-0 Port-half" src="Images to code/Website sem3/GLOSSA-covers.jpg" alt="" 
+        <img class="p-5 pb-0 ps-0 pe-0 Port-half" 
+            src="GLOSSA-covers.jpg" alt="" 
         data-toggle="tooltip"
             data-placement="right" 
             title="Glossary">
@@ -91,24 +92,28 @@
     <!-- 2nd- till last row IMAGES -->
     <div class="row mb-5">
 
-        <img class="pb-0 ps-0 pt-0 pe-0 Port-half  HB-Line" src="Images to code/Website sem3/GM1.jpg" alt="" 
+        <img class="pb-0 ps-0 pt-0 pe-0 Port-half  HB-Line" 
+            src="GM1.jpg" alt="" 
         data-toggle="tooltip"
             data-placement="right" 
             title="Glossary">
 
-        <img class="pb-0 ps-0 pt-o pe-0 Port-half  HB-Line" src="Images to code/Website sem3/GM2.jpg" alt="" 
+        <img class="pb-0 ps-0 pt-o pe-0 Port-half  HB-Line" 
+            src="GM2.jpg" alt="" 
         data-toggle="tooltip"
             data-placement="right" 
             title="Glossary">
 
 
-            <img class="pb-0 ps-0 pt-o pe-0 Port-half  HB-Line" src="Images to code/Website sem3/GLOSSA-4.jpg" alt="" 
+            <img class="pb-0 ps-0 pt-o pe-0 Port-half  HB-Line" 
+                src="GLOSSA-4.jpg" alt="" 
             data-toggle="tooltip"
                 data-placement="right" 
                 title="Glossary">
 
 
-        <img class="pb-0 ps-0 pt-o pe-0 Port-half  HB-Line" src="Images to code/Website sem3/GLOSSA-3.jpg" alt="" 
+        <img class="pb-0 ps-0 pt-o pe-0 Port-half  HB-Line" 
+            src="GLOSSA-3.jpg" alt="" 
         data-toggle="tooltip"
             data-placement="right" 
             title="Glossary">
