--- a/A-carou-work.html
+++ b/A-carou-work.html
@@ -27,7 +27,7 @@
 
                 <!-- <div class="VT-line-NB"></div> -->
 
-                <a class="navbar-brand ps-5" href="AV IMP End-term-Website.html">
+                <a class="navbar-brand ps-5" href="index.html">
                     <img src="Black logo.png" alt="" style="height:50px">
                 </a>
 
@@ -39,19 +39,19 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class=" ms-auto navbar-nav pe-5">
                         <li class="nav-item pe-2">
-                            <a class="nav-link" aria-current="page" href="AV IMP End-term-Website.html">Home</a>
+                            <a class="nav-link" aria-current="page" href="index.html">Home</a>
                         </li>
                         <li class="nav-item pe-2">
-                            <a class="nav-link" href="AV IMP End-term-Website.html">About Me</a>
+                            <a class="nav-link" href="index.html">About Me</a>
                         </li>
                         <li class="nav-item pe-2">
-                            <a class="nav-link" href="AV IMP End-term-Website.html">Skills and Strengths</a>
+                            <a class="nav-link" href="index.html">Skills and Strengths</a>
                         </li>
                         <li class="nav-item pe-2"></li>
-                        <a class="nav-link" href="1-WORK-Carousel.html">My Work</a>
+                        <a class="nav-link" href="index.html">My Work</a>
                         </li>
                         <li class="nav-item ps-2">
-                            <a class="nav-link" href="AV IMP End-term-Website.html">Connect</a>
+                            <a class="index.html" href="index.html">Connect</a>
                         </li>
                     </ul>
                 </div>
