--- a/A-carou-work.html
+++ b/A-carou-work.html
@@ -51,7 +51,7 @@
                         <a class="nav-link" href="index.html">My Work</a>
                         </li>
                         <li class="nav-item ps-2">
-                            <a class="index.html" href="index.html">Connect</a>
+                            <a class="nav-link" href="index.html">Connect</a>
                         </li>
                     </ul>
                 </div>
